<resources>
    <string name="app_name">Pinleen</string>
    <string name="read_privacy">Read Our Privacy Policy. Tap \"Agree and \ncontinue\" to accep the Our Privacy.</string>
    <string name="welcome_to_">Welcome to</string>
    <string name="agree_and_continue">Agree and continue</string>
    <string name="register">Register</string>
    <string name="let_s_setup_your_account">Let’s setup your account</string>
    <string name="create_an_account">Create an account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="i_m_at_least_18_years_old_and_agree_to_the_following_terms">I\'m at least 18 years old and agree to the following terms</string>
    <string name="i_ve_read_and_agree_to_the_e_sign_disclosure_and_consent_to_receive_all_communications_electronically">I\'ve read and agree to the E-Sign Disclosure and Consent to receive all communications electronically</string>
    <string name="verify_code">Verify Code</string>
    <string name="please_enter_the_code_we_just_sent_to_email">Please enter the code we just sent to email</string>
    <string name="please_enter_the_code_we_just_sent_to_mobile">Please enter the code we just sent to mobile</string>
    <string name="resend_code_in">Resend Code in</string>
    <string name="confirm">Confirm</string>
    <string name="your_account_has_been_verified_successfully_now_let_s_enjoy_pinleen_s_features">Your account has been verified successfully, \nnow let’s enjoy Pinleen’s features!</string>
    <string name="get_started">Get Started</string>
    <string name="choose_profile_picture">Choose profile picture</string>
    <string name="upload">Upload</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="rotate_camera">Rotate Camera</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="url_privacy">https://www.pinleen.com/privacy.txt</string>
    <string name="account_verified">Account Verified</string>
    <string name="email">Email</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="cancel">Cancel</string>
    <string name="permission_required_text">Please grant allrequired permission from application settings</string>
    <string name="please_grant_all_required_permission_from_application_settings">Please grant all required permission from application settings.</string>
    <string name="open_settings">Open settings</string>
    <string name="message_camera_permission">Camera permission is required to capture image. please grant permission for it.</string>
    <string name="grant">Grant</string>
    <string name="create_password">Create Password</string>
    <string name="selectPicture">Select Picture</string>
    <string name="capture">Capture</string>
    <string name="your_password_must_have">Your password must have:</string>
    <string name="_1_upper_case_letter_a_z">1 Upper case letter [A-Z]</string>
    <string name="_1_lower_case_letter_a_z">1 lower case letter [a-z]</string>
    <string name="_1_numeric_character_0_9">1 numeric character [0–9]</string>
    <string name="minimum_6_characters_and_maximum_30_characters">Minimum 6 characters and maximum 30 characters</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="dismiss">Dismiss</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_check">Please check</string>
    <string name="please_enter_valid_password">Password must contain at least :\n1 Upper case letter [A-Z] \n1 lower case letter [a-z]\n1 numeric character [0–9]\nMinimum 6 characters and maximum 30 characters</string>
    <string name="please_enter_valid_otp">Please enter valid OTP</string>
    <string name="phone_number">Phone Number</string>
    <string name="did_not_get_code">Did not get code?</string>
    <string name="resend">Resend</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="password_recovery">Password recovery</string>
    <string name="enter_your_e_mail_address_to_recover_your_password">Enter your E-mail address to recover your password</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="log_in">Log in</string>
    <string name="next">Next</string>
    <string name="email_address">Email address</string>
    <string name="choose_verification_method">Choose verification method</string>
    <string name="we_ll_send_you_a_verification_code_to_reset_your_npassword">We’ll send you a verification code to reset your password</string>
    <string name="verification_code">Verification code</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="set_new_password">Set new password</string>
    <string name="your_new_password_must_be_diffrent_from_previosly_used_passwords">Your new password must be diffrent from previosly used passwords.</string>
    <string name="change_password">Change Password</string>
    <string name="your_password_has_been_changed_successfully">Your password has been changed successfully!</string>

</resources>