<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextWhiteNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="@dimen/_20ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextWhiteNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            tools:text="imhr1727@gmail.com"
            android:textSize="@dimen/_10ssp" />

        <!--            <androidx.appcompat.widget.AppCompatEditText-->
        <!--                style="@style/EditTextSignUp"-->
        <!--                android:inputType="textPersonName"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginTop="@dimen/_43sdp"-->
        <!--                android:hint="@string/first_name"-->
        <!--                tools:text="Jack" />-->

        <!--            <androidx.appcompat.widget.AppCompatEditText-->
        <!--                style="@style/EditTextSignUp"-->
        <!--                android:inputType="textPersonName"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginTop="@dimen/_10sdp"-->
        <!--                android:hint="@string/last_name"-->
        <!--                tools:text="Sparrow" />-->

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            style="@style/EditTextSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/email"
            android:text="a1@mailinator.com"
            android:inputType="textEmailAddress" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            style="@style/EditTextSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableStart="@drawable/ic_be"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/password"
            android:text="Android1"
            android:inputType="textPassword"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForgotPassword"
            style="@style/TextGrayNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            style="@style/ButtonGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:text="@string/sign_in"
            android:textSize="@dimen/_14ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextGrayNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/don_t_have_an_account"
                android:textSize="@dimen/_12ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignUp"
                style="@style/TextWhiteNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/colorSecondaryPurple"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

    </LinearLayout>
</layout>