<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            tools:context=".MainActivity">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextWhiteNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:text="@string/let_s_setup_your_account"
                android:textSize="@dimen/_20ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextWhiteNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/create_an_account"
                android:textSize="@dimen/_10ssp" />

            <!--            <androidx.appcompat.widget.AppCompatEditText-->
            <!--                style="@style/EditTextSignUp"-->
            <!--                android:inputType="textPersonName"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="@dimen/_43sdp"-->
            <!--                android:hint="@string/first_name"-->
            <!--                tools:text="Jack" />-->

            <!--            <androidx.appcompat.widget.AppCompatEditText-->
            <!--                style="@style/EditTextSignUp"-->
            <!--                android:inputType="textPersonName"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="@dimen/_10sdp"-->
            <!--                android:hint="@string/last_name"-->
            <!--                tools:text="Sparrow" />-->

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                style="@style/EditTextSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/email"
                android:text="android1@mailinator.com"
                android:inputType="textEmailAddress" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                style="@style/EditTextSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/create_password"
                android:text="Android1"
                android:inputType="textPassword" />
            <!--            <androidx.appcompat.widget.AppCompatTextView-->
            <!--                style="@style/TextWhiteNormal"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="@dimen/_10sdp"-->
            <!--                android:text="@string/your_password_must_have"-->
            <!--                android:textSize="@dimen/_10ssp" />-->

            <!--            <LinearLayout-->
            <!--                android:id="@+id/llPasswordRequirements"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:paddingStart="@dimen/_5sdp"-->
            <!--                android:paddingEnd="@dimen/_5sdp"-->
            <!--                android:orientation="vertical">-->

            <!--                <androidx.appcompat.widget.AppCompatTextView-->
            <!--                    android:id="@+id/tvOneUpperCase"-->
            <!--                    style="@style/TextWhiteNormal"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="@string/_1_upper_case_letter_a_z"-->
            <!--                    android:textSize="@dimen/_10ssp" />-->
            <!--                <androidx.appcompat.widget.AppCompatTextView-->
            <!--                    android:id="@+id/tvOneLowerCase"-->
            <!--                    style="@style/TextSelectorWhiteRed"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="@string/_1_lower_case_letter_a_z"-->
            <!--                    android:textSize="@dimen/_10ssp" />-->
            <!--                <androidx.appcompat.widget.AppCompatTextView-->
            <!--                    android:id="@+id/tvOneNumeric"-->
            <!--                    style="@style/TextSelectorWhiteRed"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="@string/_1_numeric_character_0_9"-->
            <!--                    android:textSize="@dimen/_10ssp" />-->
            <!--                <androidx.appcompat.widget.AppCompatTextView-->
            <!--                    android:id="@+id/tvMinimumLength"-->
            <!--                    style="@style/TextSelectorWhiteRed"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="@string/minimum_6_characters_and_maximum_30_characters"-->
            <!--                    android:textSize="@dimen/_10ssp" />-->
            <!--            </LinearLayout>-->

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextGrayDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:textColor="@color/colorGrayDark"
                android:textSize="@dimen/_11ssp"
                tools:text="Helpful signup information" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbAge"
                style="@style/TextGrayNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/i_m_at_least_18_years_old_and_agree_to_the_following_terms" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbAgreement"
                style="@style/TextGrayNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/i_ve_read_and_agree_to_the_e_sign_disclosure_and_consent_to_receive_all_communications_electronically" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                style="@style/ButtonGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:text="@string/register"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>
    </ScrollView>
</layout>